fixed home services carousel content from jumping on transition

--- a/Assets/css/scss/home/_services.scss
+++ b/Assets/css/scss/home/_services.scss
@@ -2,6 +2,7 @@
 #services-section {
 	padding: 60px 0px 0px;
 	max-width: 100vw;
+	overflow: hidden;
 	position: relative;
 }
 
@@ -56,6 +57,7 @@
 	.tab-pane {
 		&.fade {
 			margin-left: 200px;
+			width: 100vw;
 			transition: none;
 		}
 		&.fade.active.in {
